--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="map_canvas" style="width:100%; height:100%"></div>
     <script type="text/javascript">
       $(document).ready(function() {
-        $.getJSON("json.php", function(json1) {
+        $.getJSON("gis2010.besaba.com/mardaleni/json.php", function(json1) {
           $.each(json1, function(key, data) {
             var latLng = new google.maps.LatLng(data.latitute, data.longitude); 
             // Creating a marker and putting it on the map
